content/assets/css/styles.scss
// customize bootstrap variables here:
@import "fonts";
@import "variables";
@import "bootstrap";

$max-width: $container-lg;

/* main layout */
body {
  padding-top: $navbar-height;
  width: 100%;
  overflow-x: hidden;
}

.top-space {
  padding-top: 40px;
}

h1 {
  color: $gray-dark;
  margin-bottom: -0.5em;
  margin-top: 60px;
}

h2 {
  margin-top: 1.2em;
  .date {
    margin-right: 0.2em;
    color: $brand-primary;
    font-size: 16px;
  }
}

p {
  margin-bottom: 0.5em;
}

/* navigation bar */
.navbar {
  border: none;

  .container-fluid {
    max-width: $max-width;
  }
  
  .navbar-brand {
    font-size: 24px;
    padding: 12px 15px;
  }

  .btn.btn-default {
    padding: 0.2em;
    height: 1.8em;
    max-width: 2em;
    &:hover {
      color: $brand-primary;
      background-color: #fff;
      border-color: #fff;
    }
  }
  
  .navbar-form {
    margin-top: 0.8em;
    margin-bottom: 0.8em;
  }
  
  input {
    height: 1.8em;
    padding-top: 6px;
  }
}

/* breadcrumb */
#breadcrumb {
  background-color: $gray;
  font-size: 16px;
  ol {
    max-width: $max-width;
    line-height: 0.9em;
    margin-bottom: 0;
    li + li:before {
      font-family: FontAwesome;
      font-size: 9px;
    }
  }
}

/* browse-by-buttons at homescreen */
.browse-button-bar {
  text-align: center;
  margin-top: $padding-large-vertical;
  margin-bottom: $padding-large-vertical;
  .btn-lg {
    margin: $padding-small-vertical $padding-small-horizontal;
  }
}

/* footer */
footer {
  padding: 0.7em;
  margin-top: 2em;
  color: $gray-light;
  background-color: $gray-dark;
  text-align: center;
}

/* icons */
.fa {
  min-width: 20px;
  font-size: 1.3em;
}

/* links */
a.inverted {
  color: $gray-lighter;
}

/* buttons */
.btn-lg {
  padding-top: 5px;
  padding-bottom: 5px;
  .fa {
    /* nicely positioned icons on large buttons */
    position: relative;
    top: 0.15em;
    margin-right: 0.3em;
  }
}

/* promoted videos */
.promoted {
  width: 400%;
  height: 300px;
  overflow: hidden;
  text-align: center;
  background-image: url('/images/promoted_bg.jpg');
  .item {
    width: 25%;
    height: 290px;
    position: relative;
    float: left;
    top: -112px;
    font-weight: bold;
    overflow: hidden;
 
    -moz-animation:carousel 30s infinite;
    -webkit-animation:carousel 30s infinite;
    animation:carousel 30s infinite;
  }
  .preview {
    height: 190px;
    display: inline-block;
    margin-top: 12px;
    border: 1px solid $transparent-white;
    img {
      height: 100%;
    }
  }
  .titlebar {
    width: 100%;
    height: 112px;
    background-color: $transparent-white;
    position: relative;
    top: 188px;
  }
  .title {
    color: white;
    margin: 0.7em;
    margin-bottom: 0;
  }
  .subtitle {
    font-size: 18px;
    color: $brand-primary;
    margin: 0 0.8em;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

@keyframes carousel{
    0%    { transform:translate(0, 0); }
    16.0% { transform:translate(0, 0);}
    17.2% { transform:translate(-100%, 0); }
    32.5% { transform:translate(-100%, 0); }
    33.7% { transform:translate(-200%, 0); }
    49.1% { transform:translate(-200%, 0); }
    50.3% { transform:translate(-300%, 0); }
    65.6% { transform:translate(-300%, 0); }
    66.8% { transform:translate(-200%, 0); }
    82.2% { transform:translate(-200%, 0); }
    83.8% { transform:translate(-100%, 0); }
    98.7% { transform:translate(-100%, 0); }
    100%  { transform:translate(0, 0); }
}
@-webkit-keyframes carousel{
    0%    { webkit-transform:translate(0, 0); }
    16.0% { -webkit-transform:translate(0, 0); }
    17.2% { -webkit-transform:translate(-100%, 0); }
    32.5% { -webkit-transform:translate(-100%, 0); }
    33.7% { -webkit-transform:translate(-200%, 0); }
    49.1% { -webkit-transform:translate(-200%, 0); }
    50.3% { -webkit-transform:translate(-300%, 0); }
    65.6% { -webkit-transform:translate(-300%, 0); }
    66.8% { -webkit-transform:translate(-200%, 0); }
    82.2% { -webkit-transform:translate(-200%, 0); }
    83.8% { -webkit-transform:translate(-100%, 0); }
    98.7% { -webkit-transform:translate(-100%, 0); }
    100%  { -webkit-transform:translate(0, 0); }
}
@-moz-keyframes carousel{
    0%    { -moz-transform:translate(0, 0); }
    16.0% { -moz-transform:translate(0, 0); }
    17.2% { -moz-transform:translate(-100%, 0); }
    32.5% { -moz-transform:translate(-100%, 0); }
    33.7% { -moz-transform:translate(-200%, 0); }
    49.1% { -moz-transform:translate(-200%, 0); }
    50.3% { -moz-transform:translate(-300%, 0); }
    65.6% { -moz-transform:translate(-300%, 0); }
    66.8% { -moz-transform:translate(-200%, 0); }
    82.2% { -moz-transform:translate(-200%, 0); }
    83.8% { -moz-transform:translate(-100%, 0); }
    98.7% { -moz-transform:translate(-100%, 0); }
    100%  { -moz-transform:translate(0, 0); }
}

.thumbnail .icons {
  position: absolute;
  padding: 5px;
  top: 5px;
  left: 60px;
  min-width: 32px;
  min-height: 43px;
  height: auto;
  z-index: 20;
}

.thumbnail-spinner {
  position: absolute;
  top: 7px;
  right: 60px;
  height: 18px;
  width: 18px;
  z-index: 100;
}

#sorting {
  text-align: right;

  .list {
    float: right;

    ul {
      margin-bottom: 0px;
      margin-top: 0px;
    }
  }

  .text {
    padding-left: 5px;
    display: table;
  }
}

#top {
  text-align: right;
}



/* Font classes - Tags */
.tag-cloud .xtiny { font-size: 0.75em; text-decoration:none; }
.tag-cloud .tiny { font-size: 1.0em; font-weight:lighter; }
.tag-cloud .normal{ font-size: 1.25em; text-decoration:none; }
.tag-cloud .large { font-size: 1.5em; text-decoration:none; }
.tag-cloud .xlarge { font-size: 1.75em; font-weight:bold; }


/* and now for small screens: */
@media all and (max-width: 449px) {

  /* main layout */
  body {
    padding-top: 0;
  }

  /* navigation bar */
  .navbar {
    position: initial;
    & > .container-fluid {
      display: inline-table;
      width: 100%;
    }
    form {
      width: 100%;
    }
    .navbar-form.navbar-right:last-child {
      margin-right: 0;
    }
    .navbar-header, .navbar-form {
      padding: 0;
      margin-top: 0;
      margin-bottom: 0;
      min-width: 75px;
    }
    .input-group {
      margin-bottom: $padding-small-vertical;
    }
    .button-wrapper {
      text-align: right;
      margin-top: $padding-large-vertical;
    }
  }
  
}

